--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<header>
-<h1>Matt Marshburn</h1>
-<a href="index.html">About</a>
-<a href="portfolio.html">Portfolio</a>
-<a href="contact.html">Contact</a>
-</header>
 
+<header>
+<p class="bigtext">Matt Marshburn</p>
+<a id="navlink" href="index.html">About</a>
+<a id="navlink" id="middlelink" href="portfolio.html">Portfolio</a>
+<a id="navlink" href="contact.html">Contact</a>
+</header>
+<div class="container">
 <body>
-  <img src="assets/images/_MG_5651.jpg" alt="matt" width=200px height=300px>
+  <img src="assets/images/imgresized.jpg" alt="matt" width=200px height=200px>
   <div>
     <h2>About Me</h2>
 
@@ -24,9 +25,10 @@
     <p>
       After graduating, I started an internship at the Topgolf corporate headquarters in Dallas, Texas. Since joining, I have held three different positions, and have learned a ton about the business. Through some of the work I do there, I have become familiar with web development. My interest has grown significantly, which brings me here! 
     </p>
-
   </div>
+</body>
+</div>
 
   <footer></footer>
 
-</body>
+
