--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,13 @@
     <h2>Portfolio</h2>
 
     <ul>
-        <li>Hangman</li>
-        <li>RPG Game</li>
-        <li>Trivia Game</li>
-        <li>Rutgers Info Widget</li>
-        <li>Rock Paper Scissors</li>
+        <li><img src="assets/images/image1.jpg">Hangman</li>
+        <li><img src="assets/images/image2.png"> RPG Game</li>
+        <li><img src="assets/images/image3.png"> Trivia Game</li>
+        <li><img src="assets/images/image4.jpg"> Rutgers Info Widget</li>
+        <li><img src="assets/images/image5.jpg"> Rock Paper Scissors</li>
     </ul>
 
 </body>
+
+
