--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,26 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <style>
+      body{
+        background-image:url(assets/images/houndstooth-pattern.png)
+      }
+      </style>
 </head>
 
 <header>
-<h1>Matt Marshburn</h1>
-<a href="index.html">About</a>
-<a href="portfolio.html">Portfolio</a>
-<a href="contact.html">Contact</a>
+    <style>
+        header{
+          width:100%;
+          background:white;
+          margin-top:-15px;
+          border-bottom: 5px solid #cccccc;
+        }
+      </style>
+<h1 class="bigtext">Matt Marshburn</h1>
+<a id="navlink" href="index.html">About</a>
+<a id="navlink" href="portfolio.html">Portfolio</a>
+<a id="navlink" href="contact.html">Contact</a>
 </header>
 
 <body>
