--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <style>
+  body{
+    background-image:url(assets/images/houndstooth-pattern.png)
+  }
+  </style>
 </head>
 
 
 <header>
-<p class="bigtext">Matt Marshburn</p>
+  <style>
+    header{
+      width:100%;
+      background:white;
+      margin-top:-15px;
+      border-bottom: 5px solid #cccccc;
+    }
+  </style>
+<h1 class="bigtext">Matt Marshburn</h1>
 <a id="navlink" href="index.html">About</a>
 <a id="navlink" id="middlelink" href="portfolio.html">Portfolio</a>
 <a id="navlink" href="contact.html">Contact</a>
 </header>
-<div class="container">
+
 <body>
   <img src="assets/images/imgresized.jpg" alt="matt" width=200px height=200px>
   <div>
@@ -27,7 +40,6 @@
     </p>
   </div>
 </body>
-</div>
 
   <footer></footer>
 
